# chain-data-ingestor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entry.sh  load_models.py  main.py  middleware.py  pyproject.toml  requirements.txt  test.py
configuration/: configs.py  db.sqlite3
connector/: chainscan_helper.py  cmc_helper.py  mongo_helper.py  neo4j_helper.py  new_neo4j_helper.py  node_provider_helper.py  postgres_helper.py  ubiquity_helper.py
flask_app/: __init__.py
flask_app/base/: forms.py  models.py  routes.py  util.py
flask_app/dashboard/: __init__.py  forms.py  routes.py
flask_app/dashboard/templates/: index.html  processors.html
logic/adaptor/: adaptor.py  axelarscan_adaptor.py  cmc_adaptor.py  db_adaptor.py  etherscan_adaptor.py  mongo_db_adaptor.py  node_provider_adaptor.py  postgres_db_adaptor.py  ubiquity_adaptor.py
logic/controller/: adsrecommender_controler.py  construct_graph_controler.py  fetch_transactions_controller.py  raw_transactions_controller.py  recommender_controler.py  search_controler.py
logic/controller/query_engine_controller/: query_engine_controller.py
logic/pipeline/: create_new_pipeline.py  pipeline.py
logic/pipeline/dynamic_pipeline/: dynamic_pipeline.py  exec.py
logic/pipeline/failure_pipeline/: failure_pipeline.py
logic/processor/: processor.py
sql/: create_schemas.sql  create_tables.sql  indexes.sql
utility/: AST_extractor.py  input_decoder.py  logger.py  recommender.py  script.py
utility/auction/: centralized_auction.py
utility/contract_parser/: contract_parser.py
(+19 files in other folders)
