[tool.poetry]
name = "data-processor"
version = "0.1.0"
description = "data-processor for socialblock @uwaterloo"
authors = ["sean khatiri"]
readme = "README.md"
packages = [{include = "data_processor"}]

[tool.poetry.dependencies]
python = "3.10.8"
backports-statistics = "0.1.0"
cdecimal = "2.3"
certifi = "2022.12.7"
cryptography = "39.0.0"
ctypes-snappy = "1.03"
dnspython = "2.3.0"
docutils = "0.19"
eventlet = "0.33.3"
flask = "2.2.2"
flask-login = "0.6.2"
flask-migrate = "4.0.2"
flask-sqlalchemy = "3.0.2"
flask-wtf = "1.1.1"
gevent = "22.10.2"
jinja2 = "3.1.2"
kerberos = "1.3.1"
monotime = "1.0"
pymongo-auth-aws = "1.1.0"
pymongocrypt = "1.4.1"
pyopenssl = "23.0.0"
python-decouple = "3.7"
requests = "2.28.2"
service-identity = "21.1.0"
setuptools = "65.4.1"
simplejson = "3.18.1"
sphinx = "6.1.3"
sqlalchemy = "1.4.46"
wincertstore = "0.2.1"
winkerberos = "0.9.1"
wtforms = "3.0.1"
xmlrunner = "1.7.7"
zstandard = "0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
